tests/fixtures/guardrails/valid/app/routes/webhooks.products.update.ts
import { enqueueWebhookInboxEvent } from "~/domain/webhooks";

export async function action() {
  return enqueueWebhookInboxEvent();
}
