tests/fixtures/guardrails/invalid/route-inline-typed-assigned-imported-binding-bypass/app/lib/delegated-loader.ts
export async function delegatedLoader() {
  return new Response("loader");
}

export async function delegatedAction() {
  return new Response("action");
}
